// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<FavouriteToggle /> > publicId/unlistedIdがnullの場合は両方の追加ボタンが表示される 1`] = `
<div>
  <div
    className="column-settings__row"
  >
    <button
      className="button favourite-tags__add-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      add in the favourite tags (Public)
    </button>
    <button
      className="button favourite-tags__add-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      add in the favourite tags (Unlisted)
    </button>
  </div>
</div>
`;

exports[`<FavouriteToggle /> > publicId/unlistedIdの両方が指定されている場合は両方の削除ボタンが表示される 1`] = `
<div>
  <div
    className="column-settings__row"
  >
    <button
      className="button favourite-tags__remove-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      Remove from the favourite tags (Public)
    </button>
    <button
      className="button favourite-tags__remove-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      Remove from the favourite tags (Unlisted)
    </button>
  </div>
</div>
`;

exports[`<FavouriteToggle /> > publicIdが指定されている場合はpublicに対応する削除ボタンが表示される 1`] = `
<div>
  <div
    className="column-settings__row"
  >
    <button
      className="button favourite-tags__remove-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      Remove from the favourite tags (Public)
    </button>
    <button
      className="button favourite-tags__add-button-in-column button--block"
      onClick={[Function]}
      type="button"
    >
      add in the favourite tags (Unlisted)
    </button>
  </div>
</div>
`;
